--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-MINING_POOL=""
-MINING_COIN=""
+MINING_POOL="pool.xdag.org:14656"
+MINING_COIN="XDAG"
 REFERRAL_CODE=""
-WALLET_ADDRESS=""
-WORKER_NAME=""
+WALLET_ADDRESS="H5YPY1fU9JU6KsuT8ZSVppdmXkuZD2j1o"
+WORKER_NAME="xoxo"
